Fix dropdown arrow alignment for Retina screen. Close #27

--- a/app/assets/stylesheets/header.sass
+++ b/app/assets/stylesheets/header.sass
@@ -43,16 +43,16 @@ header
       padding-right: 25px
       margin-right: 15px
       &:hover
-        background-position: right 37.5%
+        background-position: right 18.5%
       &.menu-open
         background-position: right 37.5%
       @include hidpi
-        background-size: 12px 139px
-        background-position: right -69px
+        background-size: 12px 142px
+        background-position: right 60%
         &:hover
-          background-position: right -94px
+          background-position: right 80%
         &.menu-open
-          background-position: right -119px
+          background-position: right 100%
 
     .header_menu
       @include border-radius(2px)
